--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <html>
 <head>
 <title>Git test</title>
+<script type="text/javascript">
+	function aa(){
+		alert("hi");
+	}
+</script>
 </head>
 <body>
 <header>
